--- a/backend/.env.example
+++ b/backend/.env.example
@@ -33,7 +33,7 @@ WHATSAPP_UNREADS=
 #FACEBOOK_APP_SECRET=
 
 # BROWSER SETTINGS
-BROWSER_CLIENT=PrimeSolut
+BROWSER_CLIENT=Zazap - Plataforma de multi atendimeto
 BROWSER_NAME=Chrome
 BROWSER_VERSION=10.0
 VIEW_QRCODE_TERMINAL=true
