--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "UNDER CONTROL TECHNOLOGY",
-	"name": "UNDER CONTROL TECHNOLOGY",
+	"short_name": "Zazap - Plataforma de multi atendimeto",
+	"name": "Zazap - Plataforma de multi atendimeto",
 	"icons": [
 		{
 			"src": "favicon.ico",
