--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,7 +2,7 @@ REACT_APP_BACKEND_URL= https://back.zazap.online
 REACT_APP_ENV_TOKEN = 210897ugn217204u98u8jfo2983u5
 REACT_APP_HOURS_CLOSE_TICKETS_AUTO = 24
 REACT_APP_FACEBOOK_APP_ID= 
-REACT_APP_NAME_SYSTEM = "PrimeSolut"
+REACT_APP_NAME_SYSTEM = "Zazap - Plataforma de multi atendimeto"
 REACT_APP_VERSION="1.0.0"
 REACT_APP_PRIMARY_COLOR=#0b5394
 REACT_APP_PRIMARY_DARK="#2c3145"
